--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
-!DOCTYPE html>
-<html> #bir web sayfasinin temel etiketi
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="view port" content="width=device-width, initial-scale=1.0">
     <title>Dolgun Optik</title>
-    <meta charset="UTF-8"> # attribute(özellik)
-    <meta name="Description" content="Optik">
-    <meta name="Keywords" content="">
-    <meta name="googlebot" content="">
-    <meta name="Revisit-After" content="1 week">
-    <meta name="robots" content>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div class="conteiner">
+        <div class="navbar">
+            <div class="logo">
+                <a href="#">LOGO</a>
+            </div>
+            <ul>
+                <li><a href="#">Ana Sayfa</a></li>
+                <li><a href="#">Hakkımızda</a></li>
+                <li><a href="#">Hizmetler</a></li>
+                <li><a href="#">Ürünler</a></li>
+                <li><a href="#">İletişim</a></li>
+            </ul>
+        </div>
+    </div>
 
 </body>
 </html>
